# openobserve

./: .claudeignore  .env.example  .gitignore  .test-ignore  .typos.toml  ACTION_ICONS_AUDIT.md  BUILD_TAB_ARCHITECTURE.md  BUILD_TAB_BACKEND_COMPATIBILITY.md  BUILD_TAB_COMPLETION_SUMMARY.md  BUILD_TAB_QUICK_REFERENCE.md  BUILD_TAB_README.md  BUILD_TAB_TESTING_GUIDE.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CRATE_SPLIT_BUILD_PERFORMANCE_PLAN.md  Cargo.toml  Cross.toml  DETACHED_NODES_FIX.md  HTTP2_STREAMING_TEST.md  I18N_ENFORCEMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MCP_TESTING_GUIDE.md  METRICS_CLEANUP_SUMMARY.md  METRICS_TESTS_AUDIT_REPORT.md  PERFORMANCE_TRACKING_GUIDE.md  PHASE1-ACTUAL-PERFORMANCE-RESULTS.md  POM_COMPLIANCE_FIXES_SUMMARY.md  PROMQL_CHART_EXTENSION_DESIGN_SPEC.md  PR_STRATEGY.md  PR_SUMMARY.md  README.md  SEARCH_CRATE_TWO_PR_ATOMIC_MOVE_PLAN.md  SECURITY.md  SQL_QUERY_PARSER_FEATURE_SPEC.md  TABLE_HEADER_ALIGNMENT.md  TABLE_QA_CHECKLIST.md  TABLE_VISUAL_AUDIT.md  TESTING_SESSION_MIGRATION.md  TRACE_COLORS_TEST.md  (+38 more)
crates/openobserve-api/: Cargo.toml
crates/openobserve-api/src/: lib.rs
crates/openobserve-core/: Cargo.toml
crates/openobserve-core/src/: lib.rs
src/alerts/: Cargo.toml
src/alerts/src/: anomaly_detection.rs  evaluation.rs  grouping.rs  http.rs  lib.rs  ports.rs  synthetics.rs
src/api/: Cargo.toml  README.md  build.rs
src/api/src/: lib.rs
src/api_common/: Cargo.toml  README.md
src/api_common/src/: lib.rs  request.rs
src/api_management/: Cargo.toml  README.md
src/api_management/src/: lib.rs
src/api_query/: Cargo.toml  README.md
src/api_query/src/: lib.rs
src/api_shared/: Cargo.toml
src/audit/: Cargo.toml
src/audit/src/: lib.rs
src/automation/: Cargo.toml
src/automation/src/: hook.rs  lib.rs  ports.rs
src/builtins/: Cargo.toml
src/builtins/src/: lib.rs  model_pricing.rs
src/catalog/: Cargo.toml
src/catalog/src/: enrichment.rs  functions.rs  lib.rs  retention.rs  schema.rs  store.rs  stream.rs
src/cipher/: Cargo.toml  cipher.rs  mod.rs  registry.rs
src/cipher/providers/: local.rs  mod.rs
src/cipher/src/: enterprise.rs  lib.rs  registry.rs
src/common/: Cargo.toml  README.md  auth.rs  base64.rs  cgroup.rs  file.rs  flatten.rs  functions.rs  hasher.rs  http.rs  json.rs  mod.rs  notification.rs  schema_ext.rs  str.rs  stream.rs  time.rs  utils.rs  vrl_utils.rs  zo_logger.rs
src/common/infra/: cluster.rs  config.rs  dist_lock.rs  errors.rs  ider.rs  metrics.rs  mod.rs  ofga.rs  pod.rs  wal.rs
src/common/meta/: alert.rs  authz.rs  common.rs  dashboards.rs  domain_management.rs  enrichment_table.rs  functions.rs  grpc.rs  http.rs  ingestion.rs  loki.rs  meta_store.rs  middleware_data.rs  mod.rs  organization.rs  pipeline.rs  pipelines.rs  prom.rs  promql.rs  proxy.rs  saved_view.rs  search.rs  service.rs  service_account.rs  service_streams.rs  short_url.rs  sql.rs  stats.rs  stream.rs  synthetics.rs  syslog.rs  telemetry.rs  traces.rs  types.rs  usage.rs  user.rs
src/common/migration/: alerts_openfga_ids.rs  dashboards.rs  file_list.rs  load_file_list_to_dynamo.rs  load_meta.rs  meta.rs  mod.rs  pipeline_func.rs  schema.rs  triggers.rs
src/common/src/: kv.rs  lib.rs  metadata.rs  system_settings.rs
src/common/ua_regex/: README.md  regexes.yaml
src/common/utils/: auth.rs  auth_tests.rs  base64.rs  cgroup.rs  file.rs  flatten.rs  functions.rs  hasher.rs  http.rs  http_forward.rs  ingestion_error_util.rs  js.rs  json.rs  jwt.rs  mod.rs  notification.rs  parquet.rs  rand.rs  record_batch_parquet_ext.rs  redirect_response.rs  result_writer.rs  schema.rs  schema_ext.rs  short_url.rs  ssrf_guard.rs  str.rs  stream.rs  time.rs  websocket.rs  zo_logger.rs
src/compaction/: Cargo.toml
src/compaction/src/: deleted.rs  dump.rs  flatten.rs  incremental.rs  lib.rs  merge.rs  retention.rs  stats.rs  worker.rs
src/compactor/: Cargo.toml
src/compactor/src/: catalog.rs  cluster_info.rs  dump.rs  file_list_dump.rs  flatten.rs  lib.rs  merge.rs  metadata.rs  retention.rs  service.rs  stats.rs  worker.rs
src/config/: Cargo.toml  build.rs  config.cdx.xml  profile.json
src/config/benches/: profile_puffin.rs  test_puffin.rs
src/config/data/: 01JA57205J1XV3K6KMW250YM0X.split
src/config/src/: cache_stats.rs  cluster.rs  config.rs  config_path_manager.rs  ider.rs  lib.rs  metrics.rs  prebuilt_loader.rs  router.rs  runtime_metrics.rs  stats.rs
src/core/: ALERT_OCCURRENCE_AUDIT.md  ALERT_SNAPSHOT_MANIFEST.md  Cargo.toml  README.md  build.rs
src/core/src/: anomaly_detection.rs  auth.rs  authz.rs  bootstrap.rs  cache.rs  catalog_runtime.rs  cluster_info.rs  error_suggest.rs  file_downloader.rs  file_list.rs  file_list_dump.rs  folders.rs  functions.rs  functions_cache.rs  http.rs  incidents.rs  ingestion_tokens.rs  ingestion_types.rs  keys.rs  kv.rs  lib.rs  org_cleanup.rs  org_usage.rs  organization.rs  organization_adapter.rs  pipeline_adapter.rs  providers.rs  schema.rs  schema_watcher.rs  search.rs  search_hooks.rs  search_jobs.rs  search_runtime.rs  self_reporting_adapter.rs  service.rs  session.rs  short_url.rs  stream.rs  stream_utils.rs  synthetics.rs  (+8 more)
src/core/tests/: compat_facade.rs
src/db/: Cargo.toml
src/db/src/: authz.rs  backfill.rs  distinct_values.rs  enrichment_table.rs  folders.rs  functions.rs  keys.rs  kv.rs  lib.rs  license.rs  metas.rs  metrics.rs  ofga.rs  org_status.rs  org_users.rs  organization.rs  pipeline.rs  saved_view.rs  schema.rs  service_graph.rs  short_url.rs  sourcemaps.rs  system_settings.rs  user.rs  workflows.rs
src/enrichment/: Cargo.toml
src/enrichment/src/: lib.rs  repository.rs
src/enrichment_data/: Cargo.toml
src/enrichment_data/src/: lib.rs
src/flight/: Cargo.toml  flight.cdx.xml
src/flight/src/: lib.rs  (+3 more)
src/infra/: Cargo.toml  cluster.rs  config.rs  dist_lock.rs  errors.rs  file_lock.rs  ider.rs  infra.cdx.xml  metrics.rs  mod.rs  wal.rs
src/ingester/: Cargo.toml  ingester.cdx.xml
src/ingestion/: Cargo.toml
src/ingestion_contracts/: Cargo.toml
src/jobs/: Cargo.toml  README.md
src/maintenance/: Cargo.toml
src/mcp/: Cargo.toml
(+9069 files in other folders)
