[package]
name = "openobserve-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = ["openobserve-core/enterprise"]
cloud = ["openobserve-core/cloud"]
vectorscan = ["openobserve-core/vectorscan"]
vortex = ["config/vortex", "openobserve-core/vortex"]
profiling = [
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
    "dep:jemalloc_pprof",
    "dep:pprof",
]

[dependencies]
openobserve-core = { path = "../openobserve-core" }
axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
axum-client-ip.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
mime_guess = "2.0"
ahash.workspace = true
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
aws-sdk-sns.workspace = true
base64.workspace = true
bitflags = "2.11"
blake3 = { version = "1.8", features = ["rayon"] }
bytes.workspace = true
byteorder.workspace = true
chrono.workspace = true
clap = { version = "4.5", default-features = false, features = [
    "std",
    "help",
    "usage",
    "suggestions",
    "cargo",
] }
cron.workspace = true
csv = "1.3"
dashmap.workspace = true
datafusion.workspace = true
datafusion-proto.workspace = true
datafusion-functions-aggregate-common.workspace = true
datafusion-functions-json.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
object_store.workspace = true
env_logger.workspace = true
faststr.workspace = true
flate2.workspace = true
futures.workspace = true
hashlink.workspace = true
hashbrown.workspace = true
hex.workspace = true
http-auth-basic = "0.3"
itertools.workspace = true
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
log.workspace = true
maxminddb = "0.27"
md5.workspace = true
memchr.workspace = true
mimalloc = { version = "0.1.48", features = ["v3"], optional = true }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-proto.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
promql-parser = { version = "0.6", git = "https://github.com/openobserve/promql-parser", branch = "openobserve" }
prost.workspace = true
prost-wkt-types.workspace = true
proto.workspace = true
prettytable-rs = "0.10.0"
rand.workspace = true
rayon.workspace = true
regex.workspace = true
regex-syntax.workspace = true
reqwest.workspace = true
rquickjs.workspace = true
rust-embed-for-web = "11.3"
rustls.workspace = true
rustls-native-certs.workspace = true
webpki-roots.workspace = true
sea-orm.workspace = true
segment.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
snafu.workspace = true
snap.workspace = true
sqlparser.workspace = true
sqlx.workspace = true
strum.workspace = true
svix-ksuid.workspace = true
thiserror.workspace = true
time.workspace = true
tikv-jemallocator = { version = "0.6", optional = true, features = [
    "profiling",
    "stats",
    "unprefixed_malloc_on_supported_platforms",
] }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = [
    "use_std",
    "stats",
    "profiling",
] }
tikv-jemalloc-sys = { version = "0.6", optional = true, features = [
    "profiling",
] }
jemalloc_pprof = { version = "0.8", optional = true, features = [
    "symbolize",
    "flamegraph",
] }
pprof = { version = "0.15", optional = true, features = [
    "flamegraph",
    "protobuf-codec",
] }
tempfile.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
console-subscriber = { version = "0.5", optional = true }
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uaparser = "0.6.4"
url.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
version-compare = "0.2.0"
vector-enrichment.workspace = true
x509-parser = "0.18.0"
vrl.workspace = true
zstd.workspace = true
config.workspace = true
infra.workspace = true
ingester.workspace = true
wal.workspace = true
report_server.workspace = true
chromiumoxide.workspace = true
lettre.workspace = true
tantivy.workspace = true
tantivy-fst.workspace = true
tantivy_utils.workspace = true
zip.workspace = true
futures-util = "0.3.31"
tokio-util.workspace = true
tokio-stream.workspace = true
mime = "0.3.17"
pin-project-lite.workspace = true
futures-core = "0.3.31"
derive_more = { version = "2.1", features = ["full"] }
brotli = "8.0.2"
tokio-rustls.workspace = true
roaring.workspace = true
flight.workspace = true
async-stream.workspace = true
sourcemap = "9.3.2"
