[package]
name = "openobserve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:o2_dex",
    "dep:o2_enterprise",
    "dep:o2_openfga",
    "config/enterprise",
]
cloud = ["infra/cloud", "enterprise", "o2_enterprise/cloud"]
vectorscan = ["o2_enterprise/vectorscan"]
vortex = [
    "dep:vortex",
    "dep:vortex-datafusion",
    "config/vortex",
    "o2_enterprise?/vortex",
]

[dependencies]
axum.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
ahash.workspace = true
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sdk-sns.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
cron.workspace = true
csv = "1.3"
dashmap.workspace = true
datafusion.workspace = true
datafusion-proto.workspace = true
datafusion-functions-json.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
object_store.workspace = true
vortex = { workspace = true, optional = true }
vortex-datafusion = { workspace = true, optional = true }
flate2.workspace = true
futures.workspace = true
hashlink.workspace = true
hashbrown.workspace = true
hex.workspace = true
itertools.workspace = true
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
log.workspace = true
maxminddb = "0.27"
md5.workspace = true
memchr.workspace = true
o2_dex = { workspace = true, optional = true }
o2_enterprise = { workspace = true, optional = true, default-features = false }
o2_openfga = { workspace = true, optional = true }
opentelemetry.workspace = true
opentelemetry-proto.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
promql-parser = { version = "0.6", git = "https://github.com/openobserve/promql-parser", branch = "openobserve" }
prost.workspace = true
prost-wkt-types.workspace = true
proto.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
regex-syntax.workspace = true
reqwest.workspace = true
rquickjs.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
webpki-roots.workspace = true
sea-orm.workspace = true
segment.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
snap.workspace = true
sqlparser.workspace = true
strum.workspace = true
svix-ksuid.workspace = true
thiserror.workspace = true
time.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uaparser = "0.6.4"
url.workspace = true
utoipa.workspace = true
version-compare = "0.2.0"
vector-enrichment.workspace = true
x509-parser = "0.18.0"
vrl.workspace = true
config.workspace = true
infra.workspace = true
ingester.workspace = true
wal.workspace = true
report_server.workspace = true
chromiumoxide.workspace = true
lettre.workspace = true
tantivy.workspace = true
tantivy_utils.workspace = true
zip.workspace = true
futures-util = "0.3.31"
tokio-stream.workspace = true
flight.workspace = true
async-stream.workspace = true
sourcemap = "9.3.2"

[dev-dependencies]
expect-test.workspace = true
multer = "3.1"
rcgen = "0.14.4"
