[package]
name = "openobserve-alerts"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
enterprise = [
    "dep:o2_enterprise",
    "common/enterprise",
    "config/enterprise",
    "openobserve-scheduler/enterprise",
]
cloud = ["enterprise", "o2_enterprise/cloud", "common/cloud"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
common.workspace = true
config.workspace = true
infra.workspace = true
itertools.workspace = true
log.workspace = true
o2_enterprise = { workspace = true, optional = true, default-features = false }
openobserve-scheduler.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
svix-ksuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
